добавляет курсор на ссылки

--- a/src/components/Landing/NavTab/NavTab.css
+++ b/src/components/Landing/NavTab/NavTab.css
@@ -21,6 +21,7 @@
   line-height: 16px;
   text-decoration-line: underline;
   transition: opacity .2s;
+  cursor: pointer;
 }
 
 .navTab__link:hover {
