--- a/src/components/Landing/NavTab/NavTab.css
+++ b/src/components/Landing/NavTab/NavTab.css
@@ -1,4 +1,4 @@
-.navTab {
+.nav-tab {
   padding: 0 70px;
   min-height: 66px;
   display: flex;
@@ -7,14 +7,14 @@
   background-color: #272727;
 }
 
-.navTab__list {
+.nav-tab__list {
   padding: 0;
   display: flex;
   gap: 40px;
   list-style: none;
 }
 
-.navTab__link {
+.nav-tab__link {
   color: #fff;
   font-size: 13px;
   font-weight: 500;
@@ -24,25 +24,25 @@
   cursor: pointer;
 }
 
-.navTab__link:hover {
+.nav-tab__link:hover {
   opacity: .7;
 }
 
 @media screen and (max-width: 768px) {
-  .navTab  {
+  .nav-tab  {
     padding: 0 30px;
   }
 }
 
 @media screen and (max-width: 500px) {
-  .navTab {
+  .nav-tab {
     min-height: 65px;
   }
-  .navTab__list {
+  .nav-tab__list {
     gap: 24px;
   }
 
-  .navTab__link {
+  .nav-tab__link {
     font-size: 11px;
   }
 }
