--- a/src/components/Navigation/NavBar/NavBar.css
+++ b/src/components/Navigation/NavBar/NavBar.css
@@ -1,12 +1,12 @@
-.navBar {
+.nav-bar {
   display: none;
 }
 
 @media screen and (max-width: 768px) {
-  .navBar {
+  .nav-bar {
     display: block;
   }
-  .navBar__icon {
+  .nav-bar__icon {
     padding: 0;
     width: 44px;
     height: 44px;
@@ -20,13 +20,13 @@
     transition: opacity .2s;
   }
 
-  .navBar__icon:hover {
+  .nav-bar__icon:hover {
     opacity: .8;
   }
 }
 
 @media screen and (max-width: 500px) {
-  .navBar__icon {
+  .nav-bar__icon {
     width: 40px;
     height: 40px;
   }
