--- a/src/components/Landing/Techs/Techs.css
+++ b/src/components/Landing/Techs/Techs.css
@@ -10,7 +10,7 @@
   font-size: 22px;
   font-weight: 400;
   letter-spacing: -0.88px;
-  border-bottom: solid 1px #DADADA;
+  border-bottom: solid 1px #dadada;
 }
 
 .techs__subtitle {
