--- a/src/components/Navigation/NavBar/NavBar.css
+++ b/src/components/Navigation/NavBar/NavBar.css
@@ -17,11 +17,11 @@
     background-position: center center;
     background-size: cover;
     cursor: pointer;
-    transition: opacity .2s;
+    transition: opacity 0.2s;
   }
 
   .nav-bar__icon:hover {
-    opacity: .8;
+    opacity: 0.8;
   }
 }
 
