--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -1,11 +1,11 @@
 .checkbox__label {
   display: flex;
   justify-content: center;
-  transition: opacity .2s;
+  transition: opacity 0.2s;
 }
 
 .checkbox__label:hover {
-  opacity: .8;
+  opacity: 0.8;
 }
 
 .checkbox__input {
@@ -14,7 +14,7 @@
   width: 0;
   height: 0;
   appearance: none;
-  transition: opacity .2s;
+  transition: opacity 0.2s;
 }
 
 .checkbox__inner {
@@ -38,7 +38,7 @@
   height: 20px;
   border-radius: 18px;
   background-color: #343434;
-  transition: background-color .2s;
+  transition: background-color 0.2s;
 }
 
 .checkbox__inner::after {
@@ -48,21 +48,20 @@
   width: 16px;
   height: 16px;
   border-radius: 50%;
-  background-color: #A0A0A0;
+  background-color: #a0a0a0;
   left: 2px;
   top: 2px;
-  transition: background-color .2s, left .2s;
+  transition: background-color 0.2s, left 0.2s;
 }
 
 .checkbox__input:checked + .checkbox__inner::before {
-  background-color: #2BE080;
+  background-color: #2be080;
 }
 
 .checkbox__input:checked + .checkbox__inner::after {
   background-color: #fff;
   left: 18px;
 }
-
 
 @media screen and (max-width: 768px) {
   .checkbox {
