--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,7 +8,7 @@
   margin: 0;
   padding: 76px 0 19px;
   border-bottom: 1px solid #424242;
-  color: #8B8B8B;
+  color: #8b8b8b;
   font-size: 13px;
   font-weight: 400;
   text-align: center;
@@ -42,11 +42,11 @@
   font-weight: 400;
   line-height: normal;
   text-decoration: none;
-  transition: opacity .2s;
+  transition: opacity 0.2s;
 }
 
 .footer__link:hover {
-  opacity: .7;
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 500px) {
@@ -59,22 +59,22 @@
     font-size: 12px;
   }
 
-  .footer__text_type_savedMovies{
-    padding-top: 160px;    
+  .footer__text_type_savedMovies {
+    padding-top: 160px;
   }
 
   .footer__container {
     padding: 30px 0 20px;
     display: grid;
     justify-content: center;
-    grid-template-areas: 
-    'links'
-    'copyright';
+    grid-template-areas:
+      'links'
+      'copyright';
   }
 
   .footer__copyright {
     padding-top: 30px;
-    color: #8B8B8B;
+    color: #8b8b8b;
   }
 
   .footer__links {
@@ -82,7 +82,7 @@
     text-align: center;
     gap: 12px;
   }
-  
+
   .footer__link {
     font-size: 12px;
   }
