--- a/src/components/Landing/AboutMe/AboutMe.css
+++ b/src/components/Landing/AboutMe/AboutMe.css
@@ -9,7 +9,7 @@
   font-size: 22px;
   font-weight: 400;
   letter-spacing: -0.88px;
-  border-bottom: solid 1px #DADADA;
+  border-bottom: solid 1px #dadada;
 }
 
 .student__container {
@@ -18,7 +18,7 @@
   grid-template-columns: auto auto;
   grid-template-rows: 77px 45px 188px auto;
   column-gap: 50px;
-  grid-template-areas: 
+  grid-template-areas:
     'name photo'
     'profession photo'
     'about photo'
@@ -67,12 +67,12 @@
   font-weight: 500;
   color: #fff;
   text-decoration: none;
-  transition: opacity .2s;
+  transition: opacity 0.2s;
   grid-area: link;
 }
 
 .student__link-repo:hover {
-  opacity: .7;
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 768px) {
@@ -88,7 +88,7 @@
     padding: 66px 0 90px;
     grid-template-rows: 56px 38px 195px auto;
   }
-  
+
   .student__name {
     max-width: 364px;
     font-size: 40px;
@@ -125,7 +125,7 @@
     display: flex;
     flex-direction: column;
   }
-  
+
   .student__name {
     padding-bottom: 20px;
   }
@@ -137,11 +137,11 @@
   .student__about {
     padding-bottom: 40px;
   }
-  
+
   .student__photo {
-   padding-bottom: 40px;
-   width: 292px;
-   height: 352px;
+    padding-bottom: 40px;
+    width: 292px;
+    height: 352px;
   }
 }
 
