--- a/src/components/Landing/AboutProject/AboutProject.css
+++ b/src/components/Landing/AboutProject/AboutProject.css
@@ -10,7 +10,7 @@
   font-size: 22px;
   font-weight: 400;
   letter-spacing: -0.88px;
-  border-bottom: solid 1px #DADADA;
+  border-bottom: solid 1px #dadada;
 }
 
 .about-project__container {
@@ -64,14 +64,14 @@
   margin: 0;
   font-size: 14px;
   font-weight: 400;
-  background-color: #3DDC84;
+  background-color: #3ddc84;
   color: #000;
 }
 
 .about-project__caption {
   margin: 0;
   padding-top: 14px;
-  color: #8B8B8B;
+  color: #8b8b8b;
   font-size: 14px;
   font-weight: 500;
   line-height: 17px;
@@ -124,7 +124,7 @@
   }
 
   .about-project__wripper {
-    gap: 18px
+    gap: 18px;
   }
   .about-project__subtitle {
     font-size: 18px;
