--- a/src/components/Landing/NavTab/NavTab.css
+++ b/src/components/Landing/NavTab/NavTab.css
@@ -20,16 +20,16 @@
   font-weight: 500;
   line-height: 16px;
   text-decoration-line: underline;
-  transition: opacity .2s;
+  transition: opacity 0.2s;
   cursor: pointer;
 }
 
 .nav-tab__link:hover {
-  opacity: .7;
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 768px) {
-  .nav-tab  {
+  .nav-tab {
     padding: 0 30px;
   }
 }
