--- a/src/components/Landing/Portfolio/Portfolio.css
+++ b/src/components/Landing/Portfolio/Portfolio.css
@@ -5,7 +5,7 @@
 .portfolio__title {
   margin: 0;
   padding-bottom: 50px;
-  color: #8B8B8B;
+  color: #8b8b8b;
   font-size: 18px;
   font-weight: 400;
   line-height: 20px;
@@ -31,7 +31,7 @@
   letter-spacing: -1.2px;
   text-decoration: none;
   color: #fff;
-  border-bottom: 1px solid #E6E6E6;
+  border-bottom: 1px solid #e6e6e6;
 }
 
 .portfolio__icon {
@@ -39,11 +39,11 @@
   margin-right: 5px;
   background-size: cover;
   background-repeat: no-repeat;
-  transition: opacity .2s;
+  transition: opacity 0.2s;
 }
 
 .portfolio__link:hover {
-  opacity: .7;
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 768px) {
@@ -74,7 +74,7 @@
   .portfolio__links {
     padding-bottom: 70px;
   }
-  
+
   .portfolio__link {
     padding-bottom: 18px;
     font-size: 18px;
