--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -5,13 +5,15 @@
   border-radius: 6px;
   box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
   list-style: none;
+  cursor: pointer;
 }
 
 .movie__preview {
-  max-width: 364px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  display: block;
+  width: 364px;
+  height: 203px;
+  width: 100%;
+  object-fit: cover;
 }
 
 .movie__wrapper {
@@ -40,7 +42,7 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
-  transition: opacity .2s;
+  transition: opacity 0.2s;
 }
 
 .movie__button_type_like {
@@ -57,13 +59,13 @@
 }
 
 .movie__button:hover {
-  opacity: .8;
+  opacity: 0.8;
 }
 
 .movie__duration {
   margin: 0;
   padding: 0px 16px;
-  color: #8B8B8B;
+  color: #8b8b8b;
   font-size: 11px;
   font-weight: 400;
 }
@@ -93,7 +95,7 @@
   .movie__conteiner {
     cursor: pointer;
   }
-  
+
   .movie__conteiner:hover .movie__button_type_delete {
     opacity: 1;
   }
