--- a/src/components/Navigation/NavAuth/NavAuth.css
+++ b/src/components/Navigation/NavAuth/NavAuth.css
@@ -9,7 +9,7 @@
   padding-right: 16px;
   text-decoration: none;
   color: #fff;
-  transition: opacity .2s;
+  transition: opacity 0.2s;
 }
 
 .navigation__movies_active {
@@ -21,7 +21,7 @@
 }
 
 .navigation__movies:hover {
-  opacity: .7;
+  opacity: 0.7;
 }
 
 .navigation__profile-link {
@@ -32,7 +32,7 @@
   font-size: 13px;
   font-weight: 500;
   line-height: 12px;
-  transition: opacity .2s;
+  transition: opacity 0.2s;
 }
 
 .navigation__profile-icon {
@@ -45,7 +45,7 @@
 }
 
 .navigation__profile-link:hover {
-  opacity: .7;
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 768px) {
