--- a/src/components/PageNotFound/PageNotFound.css
+++ b/src/components/PageNotFound/PageNotFound.css
@@ -10,7 +10,7 @@
   padding-top: 250px;
   font-size: 140px;
   font-weight: 400;
-} 
+}
 
 .not-found__text {
   margin: 10px 0 0 0;
@@ -20,15 +20,15 @@
 
 .not-found__button {
   padding-top: 184px;
-  color: #4285F4;
+  color: #4285f4;
   font-size: 14px;
   font-weight: 400;
   text-decoration: none;
-  transition: opacity .2s;
+  transition: opacity 0.2s;
 }
 
 .not-found__button:hover {
-  opacity: .8;
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 768px) {
