--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -39,7 +39,7 @@
 .profile__errors {
   min-height: 17px;
   grid-column: span 2;
-  color: #EE3465;
+  color: #ee3465;
   font-size: 10px;
   font-weight: 400;
 }
@@ -59,12 +59,12 @@
 }
 
 .profile__input:focus {
-  outline: 1px solid #fff;
-  border-radius: 3px;
+  outline: none;
+  border-bottom: 1px solid #fff;
 }
 
 .profile__input_errors {
-  color: #EE3465;
+  color: #ee3465;
 }
 
 .profile__button {
@@ -76,21 +76,21 @@
   font-size: 13px;
   font-weight: 400;
   cursor: pointer;
-  transition: opacity .2s;
+  transition: opacity 0.2s;
 }
 
 .profile__button:not([disabled]):hover {
-  opacity: .8;
+  opacity: 0.8;
 }
 
 .profile__button:disabled {
   cursor: default;
-  opacity: .3;
+  opacity: 0.3;
 }
 
 .profile__button_type_logOut {
   margin-top: 16px;
-  color: #EE3465;
+  color: #ee3465;
   font-weight: 500;
 }
 
