--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,11 +1,20 @@
-.seachForm {
+@keyframes empty-input-error {
+  from {
+    border: 1px solid #ee3465;
+  }
+  to {
+    border: none;
+  }
+}
+
+.searchForm {
   margin: 80px 0 0;
   gap: 10px;
   padding-bottom: 40px;
   border-bottom: 1px solid #424242;
 }
 
-.seachForm__label {
+.searchForm__label {
   padding-bottom: 29px;
   display: flex;
   align-items: center;
@@ -13,22 +22,31 @@
   gap: 10px;
 }
 
-.seachForm__input {
+.searchForm__input {
   margin: 0;
   padding: 0 20px 0;
   width: 95%;
   min-height: 50px;
   box-sizing: border-box;
-  background-color: #2F2F2F;
+  background-color: #2f2f2f;
   border: none;
   border-radius: 8px;
-  color: #8B8B8B;
+  color: #8b8b8b;
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
 }
 
-.seachForm__button {
+.searchForm__input:focus {
+  outline: none;
+  border: 1px solid #fff;
+}
+
+.searchForm__input_type_empty {
+  animation: empty-input-error 0.2s 3;
+}
+
+.searchForm__button {
   padding: 0;
   min-width: 44px;
   min-height: 44px;
@@ -37,29 +55,45 @@
   background-repeat: no-repeat;
   border: none;
   cursor: pointer;
-  transition: opacity .2s;
+  transition: opacity 0.2s;
 }
 
-.seachForm__button:hover {
-  opacity: 0.8
+.searchForm__button:hover {
+  opacity: 0.8;
+}
+
+.searchForm__errors {
+  min-height: 17px;
+  color: #ee3465;
+  font-size: 10px;
+  font-weight: 400;
+  text-align: center;
+}
+
+.searchForm__errors_visible {
+  opacity: 1;
+}
+
+.searchForm__errors_hidden {
+  opacity: 0;
 }
 
 @media screen and (max-width: 768px) {
-  .seachForm__label {
+  .searchForm__label {
     padding-bottom: 41px;
   }
 }
 
 @media screen and (max-width: 500px) {
-  .seachForm {
+  .searchForm {
     padding: 0 4px 40px;
   }
 
-  .seachForm__label {
+  .searchForm__label {
     padding-bottom: 47px;
   }
 
-  .seachForm__input {
+  .searchForm__input {
     padding: 0 15px;
     width: 90%;
     min-height: 44px;
